--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "key1":"s",
-    "key2":"d",
-    "key3":"l",
-    "key4":"semicolon"
+  "key1": "a",
+  "key2": "s",
+  "key3": "l",
+  "key4": ";"
 }
